# crossvector

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  benchmark.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  test-build.yml
docs/: api.md  architecture.md  benchmarking.md  configuration.md  contributing.md  embeddings.md  index.md  installation.md  querydsl.md  quickstart.md  schema.md
docs/adapters/: databases.md  embeddings.md
scripts/: __init__.py  backend.py  benchmark.py  release.sh
scripts/benchmark/: README.md  __init__.py  __main__.py  generate_fixtures.py  run.py
scripts/benchmark/data/: .gitignore
scripts/tests/: README.md  __init__.py  test_astradb.py  test_chroma.py  test_chroma_cloud.py  test_integration.py  test_milvus.py  test_pgvector.py
src/crossvector/: __init__.py  abc.py  constants.py  engine.py  exceptions.py  logger.py  schema.py  settings.py  types.py  utils.py
src/crossvector/dbs/: astradb.py  chroma.py  milvus.py  pgvector.py
src/crossvector/embeddings/: gemini.py  openai.py
src/crossvector/querydsl/: __init__.py  q.py  where.py
src/crossvector/querydsl/compilers/: __init__.py  astradb.py  base.py  chroma.py  milvus.py  pgvector.py  utils.py
src/crossvector/querydsl/filters/: astradb.py  base.py  chroma.py  milvus.py  pgvector.py  utils.py
tests/: __init__.py  conftest.py  test_abc_extended.py  test_engine.py  test_engine_extended.py  test_flexible_input.py  test_gemini_embeddings.py  test_logger_extended.py  test_openai_embeddings.py  test_q_coverage.py  test_querydsl_operators.py  test_schema.py  test_schema_extended.py  test_utils.py  test_utils_extended.py
tests/mock/: __init__.py  mock_backend.py
tests/querydsl/: test_adapters_where.py  test_compilers.py  test_querydsl.py
tests/searches/: README.md  __init__.py  test_astradb.py  test_chroma.py  test_milvus.py  test_pgvector.py
